--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -25,8 +25,8 @@ x-airflow-common:
   # build: .
   environment:
     &airflow-common-env
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@ru-postgres/airflow
+    AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
     AIRFLOW__WEBSERVER__SECRET_KEY: 'howhowhow'
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
@@ -36,11 +36,11 @@ x-airflow-common:
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
-    postgres:
+    ru-postgres:
       condition: service_healthy
 
 services:
-  docker-socket-proxy:
+  ru-docker-socket-proxy:
     image: tecnativa/docker-socket-proxy:0.1.1
     environment:
       CONTAINERS: 1
@@ -52,9 +52,9 @@ services:
     volumes:
       - /var/run/docker.sock://var/run/docker.sock
 
-  postgres:
+  ru-postgres:
     image: postgres:13
-    container_name: airflow-database
+    container_name: airflow-database-ru-crawler
     ports:
       - 5439:5432
     environment:
@@ -69,10 +69,10 @@ services:
       retries: 5
     restart: always
 
-  airflow-webserver:
+  ru-airflow-webserver:
     <<: *airflow-common
     command: webserver
-    container_name: airflow-webserver
+    container_name: airflow-webserver-ru-crawler
     ports:
       - 8089:8080
     healthcheck:
@@ -83,13 +83,13 @@ services:
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-init:
+      ru-airflow-init:
         condition: service_completed_successfully
 
-  airflow-scheduler:
+  ru-airflow-scheduler:
     <<: *airflow-common
     command: scheduler
-    container_name: airflow-scheduler
+    container_name: airflow-scheduler-ru-crawler
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type SchedulerJob --hostname "$${HOSTNAME}"']
       interval: 10s
@@ -98,13 +98,13 @@ services:
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-init:
+      ru-airflow-init:
         condition: service_completed_successfully
 
-  airflow-init:
+  ru-airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
-    container_name: airflow-init
+    container_name: airflow-init-ru-crawler
     # yamllint disable rule:line-length
     command:
       - -c
